alert.scss: fix: color gradient w ligthening for better contrast, aslo only 1 caard bg vara

--- a/www/css/alert.scss
+++ b/www/css/alert.scss
@@ -1,7 +1,7 @@
 .alert {
   position: relative;
   width: 100%;
-  background: rgb(var(--col-bg-card-light));
+  background: rgb(var(--col-bg-card));
   p, span {
     padding: 0px 30px;
   }
